# Generative-Models

./: README.md  generate_sample.py  pyproject.toml  run_ddim_experiments.py  train.py
checkpoints/: gan.pth
configs/: ddim.yaml  ddpm.yaml  gan.yaml  meanflow.yaml
data/: checkerboard.npy
results/: ddim_generated_sample.npy  ddim_submission.csv  ddpm_generated_sample.npy  ddpm_submission.csv  gan_generated_sample.npy  gan_submission.csv  meanflow_generated_sample.npy  meanflow_submission.csv
scripts/: run_problem_1.sh  run_problem_2a.sh  run_problem_2b.sh  run_problem_adv.sh
src/: diffusion.py  gan.py  meanflow.py  metric.py  utils.py
