[project]
name = "ml-hw4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imageio>=2.31.0",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "omegaconf>=2.3.0",
    "pot>=0.9.6.post1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "wandb>=0.16.0",
]
